--- a/2. Data Preparation.ipynb
+++ b/2. Data Preparation.ipynb
@@ -5,7 +5,9 @@
    "id": "caca5a61",
    "metadata": {},
    "source": [
-    "## 3.Data Preparation"
+    "***\n",
+    "## 3.DATA PREPARATION\n",
+    "***"
    ]
   },
   {
@@ -16,15 +18,11 @@
    "outputs": [],
    "source": [
     "# importing libraries\n",
-    "import os\n",
+    "import warnings \n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from understanding import DataLoader, DataChecks, DataInfo\n",
-    "from IPython.display import display, HTML\n",
-    "import warnings \n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "from understanding import DataLoader, DataChecks, DataInfo"
    ]
   },
   {
@@ -48,14 +46,6 @@
     "\n",
     "# Loading the users csv file\n",
     "users_data= loader.read_data(\"data/users.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50c27c6a",
-   "metadata": {},
-   "source": [
-    "The `useful`, `funny`, and `cool` columns in the User Review dataset are  not particularly useful for the analysis. "
    ]
   },
   {
@@ -192,6 +182,8 @@
    "id": "37bbe2f0",
    "metadata": {},
    "source": [
+    " **Observations**\n",
+    " \n",
     " The columns useful, funny, and cool have been removed as they do not directly contribute to understanding user preferences or the quality of reviews. By eliminating these columns, the dataset is streamlined, making the analysis more focused on features that will enhance the accuracy of the recommendation system."
    ]
   },
@@ -437,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Droppin\n",
+    "#Dropping null values\n",
     "restaurant_data = restaurant_data.dropna(subset=['attributes'])"
    ]
   },
@@ -485,7 +477,9 @@
    "id": "e9374966",
    "metadata": {},
    "source": [
-    "There were some missing values in the `attributes`, `address`, `postal_code`, and `hours` columns.\n",
+    " **Observations**\n",
+    " \n",
+    " There were some missing values in the `attributes`, `address`, `postal_code`, and `hours` columns.\n",
     "\n",
     "Rows with missing `attributes` were removed as this column is critical for analysis.\n",
     "\n",
@@ -494,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "19f3b9cb",
    "metadata": {},
    "outputs": [],
@@ -513,14 +507,9 @@
    "source": [
     "# Map state abbreviations to full state names\n",
     "state_abbreviations = {\n",
-    "    'AB': 'Alberta', 'AZ': 'Arizona', 'CA': 'California',\n",
-    "    'CO': 'Colorado', 'DE': 'Delaware', 'FL': 'Florida',\n",
-    "    'HI': 'Hawaii', 'ID': 'Idaho', 'IL': 'Illinois', 'IN': 'Indiana','LA': 'Louisiana',  'MO': 'Missouri',\n",
-    "    'NV': 'Nevada', \n",
-    "    'NJ': 'New Jersey',\n",
-    "    'NC': 'North Carolina', \n",
-    "     'PA': 'Pennsylvania',  \n",
-    "     'TN': 'Tennessee', 'MT': 'Monatana'\n",
+    "    'AB': 'Alberta', 'AZ': 'Arizona', 'CA': 'California','CO': 'Colorado', 'DE': 'Delaware', 'FL': 'Florida','HI': 'Hawaii', 'ID': 'Idaho',\n",
+    "    'IL': 'Illinois', 'IN': 'Indiana','LA': 'Louisiana',  'MO': 'Missouri','NV': 'Nevada', 'NJ': 'New Jersey','NC': 'North Carolina',\n",
+    "    'PA': 'Pennsylvania',  'TN': 'Tennessee', 'MT': 'Monatana'\n",
     "}\n",
     "# Replace state initials with full names\n",
     "restaurant_data_filtered['state'] = restaurant_data_filtered['state'].map(state_abbreviations)\n",
@@ -941,7 +930,9 @@
    "id": "38df4062",
    "metadata": {},
    "source": [
-    "The `categories` column have been standardized and exploded to handle multiple categories per restaurant. This transformation is necessary to accurately categorize each restaurant's offerings, which is essential for matching user preferences with the right restaurants.\n",
+    " **Observations**\n",
+    " \n",
+    " The `categories` column have been standardized and exploded to handle multiple categories per restaurant. This transformation is necessary to accurately categorize each restaurant's offerings, which is essential for matching user preferences with the right restaurants.\n",
     "\n",
     "The exploded DataFrame has been filtered to include only rows with specified cuisines. By narrowing down to specific cuisines, we ensure that the recommender system focuses on the most relevant restaurant types. This helps in improving precision"
    ]
@@ -994,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "6ec08a75",
    "metadata": {},
    "outputs": [],
