Data Preparation refined

--- a/2. Data Preparation.ipynb
+++ b/2. Data Preparation.ipynb
@@ -21,6 +21,8 @@
     "import warnings \n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pickle\n",
+    "import os\n",
     "warnings.filterwarnings('ignore')\n",
     "from understanding import DataLoader, DataChecks, DataInfo"
    ]
@@ -178,6 +180,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "774ab63c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31834"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users_data_cleaned.business_id.nunique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37bbe2f0",
    "metadata": {},
@@ -197,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "722ed654",
    "metadata": {},
    "outputs": [],
@@ -208,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "904dbb84",
    "metadata": {},
    "outputs": [
@@ -376,7 +399,7 @@
        "4  {'Monday': '11:0-14:0', 'Tuesday': '11:0-14:0'...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +411,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "cfae5ee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52286"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_data.business_id.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e2177e2f",
    "metadata": {},
    "outputs": [
@@ -412,7 +456,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,8 +467,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a986c8d",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "\n",
+    "The dataset contains null values in the columns: address, postal code, attributes and hours"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f640a31d",
    "metadata": {},
    "outputs": [],
@@ -435,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "d88904c7",
    "metadata": {},
    "outputs": [
@@ -459,7 +513,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,28 +542,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "id": "8cc5632d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "PA     12538\n",
+       "FL      8632\n",
+       "TN      4297\n",
+       "MO      4219\n",
+       "IN      4119\n",
+       "LA      3596\n",
+       "NJ      3302\n",
+       "AZ      2635\n",
+       "AB      2355\n",
+       "NV      1657\n",
+       "ID      1290\n",
+       "CA      1151\n",
+       "IL       975\n",
+       "DE       949\n",
+       "NC         1\n",
+       "CO         1\n",
+       "HI         1\n",
+       "MT         1\n",
+       "XMS        1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_data.state.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "19f3b9cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# States labeled `XMS` will be filtered out, as they do not seem valid\n",
-    "valid_states = ['XMS']\n",
+    "valid_states = ['XMS','MT','NC','HI','CO',]\n",
     "restaurant_data_filtered = restaurant_data[~restaurant_data['state'].isin(valid_states)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c9d3dcce",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Map state abbreviations to full state names\n",
     "state_abbreviations = {\n",
-    "    'AB': 'Alberta', 'AZ': 'Arizona', 'CA': 'California','CO': 'Colorado', 'DE': 'Delaware', 'FL': 'Florida','HI': 'Hawaii', 'ID': 'Idaho',\n",
-    "    'IL': 'Illinois', 'IN': 'Indiana','LA': 'Louisiana',  'MO': 'Missouri','NV': 'Nevada', 'NJ': 'New Jersey','NC': 'North Carolina',\n",
-    "    'PA': 'Pennsylvania',  'TN': 'Tennessee', 'MT': 'Monatana'\n",
+    "    'AB': 'Alberta', 'AZ': 'Arizona', 'CA': 'California', 'DE': 'Delaware', 'FL': 'Florida', 'ID': 'Idaho','IL': 'Illinois',\n",
+    "    'IN': 'Indiana','LA': 'Louisiana',  'MO': 'Missouri','NV': 'Nevada', 'NJ': 'New Jersey','PA': 'Pennsylvania',  'TN': 'Tennessee', \n",
     "}\n",
     "# Replace state initials with full names\n",
     "restaurant_data_filtered['state'] = restaurant_data_filtered['state'].map(state_abbreviations)\n",
@@ -521,8 +615,12 @@
    "id": "2df0c3cd",
    "metadata": {},
    "source": [
+    "**Observation**\n",
+    "\n",
     "The state abbreviations have been successfully mapped to their corresponding full state names, providing more clarity and concistency in the data.\n",
-    "This is important when segmenting recommendations by geographic region."
+    "This is important when segmenting recommendations by geographic region.\n",
+    "\n",
+    "States labeled XMS,MT,NC,HI and Co have been filtered  out as they contain only a value of one restaurant per in each state therefore not relevant\n"
    ]
   },
   {
@@ -545,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "0c47572d",
    "metadata": {},
    "outputs": [],
@@ -556,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e02dceef",
    "metadata": {},
    "outputs": [
@@ -717,7 +815,7 @@
        "0  {'Monday': '7:0-20:0', 'Tuesday': '7:0-20:0', ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,18 +827,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "8ecb017c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Standardize spacing in the 'Category' column\n",
-    "df_exploded['categories'] = df_exploded['categories'].str.strip().str.replace(r'\\s+', ' ', regex=True)"
+    "df_exploded['categories'] = df_exploded['categories'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "df_exploded['city'] = df_exploded['city'].str.strip().str.replace(r'\\s+', ' ', regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "86c60ecd",
    "metadata": {},
    "outputs": [],
@@ -754,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "c486c166",
    "metadata": {},
    "outputs": [
@@ -915,7 +1014,7 @@
        "5  American (Traditional)  {'Monday': '6:0-22:0', 'Tuesday': '6:0-22:0', ...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "e8b13178",
    "metadata": {},
    "outputs": [
@@ -957,10 +1056,10 @@
        "52278    State:Pennsylvania, City:Philadelphia, Address...\n",
        "52283    State:Pennsylvania, City:Philadelphia, Address...\n",
        "52285    State:Alberta, City:Edmonton, Address:2470 Gua...\n",
-       "Name: location, Length: 38552, dtype: object"
+       "Name: location, Length: 38550, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,21 +1079,94 @@
    "id": "9590ebb6",
    "metadata": {},
    "source": [
+    "**Observation**\n",
+    "\n",
     "Combining the `state`, `city`, and `address` columns is vital for geographic-based recommendations, enabling the system to suggest restaurants within a user’s preferred or current location."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6ec08a75",
+   "execution_count": 21,
+   "id": "9b54bfb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decompress(x):\n",
+    "    \"\"\"\n",
+    "    The function takes in a dictionary and returns only the keys that have their values not being False   \n",
+    "    \"\"\"\n",
+    "      \n",
+    "    list_ = []\n",
+    "    \n",
+    "    # Check if x is a string\n",
+    "    if not isinstance(x, str):\n",
+    "        return ' '\n",
+    "    \n",
+    "    # evaluate the attributes column to convert it from a string to a dictionary\n",
+    "    try:\n",
+    "        data_dict = eval(x)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error evaluating {x}: {str(e)}\")\n",
+    "        return ' '\n",
+    "    \n",
+    "    # iterate through the key-value pairs in the dictionary\n",
+    "    for key, val in data_dict.items():\n",
+    "        # check if the key is in the specified categories and if the value is not \"None\"\n",
+    "        if (key in ['Ambience', 'GoodForMeal', 'BusinessParking']) and (val != \"None\"):\n",
+    "            # if conditions are met, further iterate through sub-dictionary\n",
+    "            try:\n",
+    "                sub_dict = eval(val)\n",
+    "                for key_, val_ in sub_dict.items():\n",
+    "                    # if the sub-dictionary value is true, append it to the list\n",
+    "                    if val_:\n",
+    "                        list_.append(f'{key}{key}')\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error evaluating {val}: {str(e)}\")\n",
+    "        else:\n",
+    "            # if the value is not false, append the key to the list\n",
+    "            if val != 'False':\n",
+    "                list_.append(key)\n",
+    "    \n",
+    "    # join the list of selected attribute names into a space-separated string\n",
+    "    return \" \".join(list_)\n",
+    "\n",
+    "# create a new column 'attributes_true' in the df by applying the decompress function\n",
+    "# include a condition to handle cases where attributes is 'Not-Available'\n",
+    "restaurant_exploded['attributes_true'] = restaurant_exploded.attributes.apply(lambda x: decompress(x) if x != 'Not-Available' else ' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ee3ae6",
+   "metadata": {},
+   "source": [
+    "**Description**\n",
+    "\n",
+    "We've defined a decompress function to clean attribute data by converting strings to dictionaries, extracting relevant keys with truthy values, and creating a new attributes_true column in the restaurant_exploded DataFrame. This refines the dataset by retaining meaningful attributes for analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8919ee53",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the cleaned user review data to a new CSV file\n",
-    "users_data_cleaned.to_csv('data/cleaned_users_data.csv', index=False)\n",
+    "users_data_cleaned.to_csv('data/cleaned_users_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0e099ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Save the filtered and transformed restaurant data to a new CSV file\n",
-    "restaurant_exploded.to_csv('data/filtered_restaurants_data.csv', index=False)\n"
+    "with open('Pickled_files/restaurants_data.pkl','wb')as file:\n",
+    "    pickle.dump(restaurant_exploded, file)\n"
    ]
   }
  ],
