fixing editting issues

--- a/0. Preliminary_notebook.ipynb
+++ b/0. Preliminary_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "663c019a-73ca-4b16-9447-e37709dce2f1",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8a061847-a6cc-4dd7-a326-3fc6d4b43f46",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "207299ca-d5f3-4d14-a58a-3fc7404417fd",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "4  {'Wednesday': '14:0-22:0', 'Thursday': '16:0-2...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "8b7d6725-23e9-4d93-8cd9-5ae4bc8bfbfd",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2e07b001-2e85-451b-9ec9-b81169abbe40",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
        "11  {'Monday': '11:0-14:0', 'Tuesday': '11:0-14:0'...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "105f4675-3098-4aed-bb70-d087565b32b4",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9bc6883c-790c-46b4-89b3-c649175bbc31",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5444f411-595c-4059-a1df-3ae84ae8ff3f",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e37fd0be-801f-4433-969c-cb6d8e3fab71",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "49c1780e-0235-4890-a707-7b4138ff934a",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "52286"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "47ee3b82-6054-47f4-a935-85fdc3904a83",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "1a4e8276-e192-4c71-9528-37b9fcbcca7b",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "4f142437-52fd-4f8b-9926-e289bc24ce16",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
        "5  I am a long term frequent customer of this est... 2015-09-23 23:10:31  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "c44c9666-6d23-42ee-83c3-742e5803967a",
    "metadata": {},
    "outputs": [
@@ -803,19 +803,19 @@
        "(Timestamp('2005-02-16 03:23:22'), Timestamp('2022-01-19 19:48:25'))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TImeframe of the dataset\n",
+    "# Timeframe of the dataset\n",
     "rest_reviews.date.min(), rest_reviews.date.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "efa4344a-fedd-4f1d-a7ec-743b2125bb6c",
    "metadata": {},
    "outputs": [
@@ -853,111 +853,111 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>338961</th>\n",
-       "      <td>iBUJvIOkToh2ZECVNq5PDg</td>\n",
-       "      <td>iAD32p6h32eKDVxsPHSRHA</td>\n",
-       "      <td>YB26JvvGS2LgkxEKOObSAw</td>\n",
-       "      <td>5</td>\n",
+       "      <th>0</th>\n",
+       "      <td>KU_O5udG6zpxOg-VcAEodg</td>\n",
+       "      <td>mh_-eMZ6K5RLWhZyISBhwA</td>\n",
+       "      <td>XQfwVwDr-v0ZS3_CbbE5Xw</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>I've been eating at this restaurant for over 5...</td>\n",
-       "      <td>2021-01-08 01:49:36</td>\n",
+       "      <td>If you decide to eat here, just be aware it is...</td>\n",
+       "      <td>2018-07-07 22:09:11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>341768</th>\n",
-       "      <td>HgEofz6qEQqKYPT7YLA34w</td>\n",
-       "      <td>rYvWv-Ny16b1lMcw1IP7JQ</td>\n",
-       "      <td>jfIwOEXcVRyhZjM4ISOh4g</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Sx8TMOWLNuJBWer-0pcmoA</td>\n",
+       "      <td>bcjbaE6dDog4jkNY91ncLQ</td>\n",
+       "      <td>e4Vwtrqf-wpJfwesgvdgxQ</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>How does a delivery person from here get lost ...</td>\n",
-       "      <td>2021-01-02 00:19:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cute interior and owner (?) gave us tour of up...</td>\n",
+       "      <td>2017-01-14 20:54:15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>344290</th>\n",
-       "      <td>Kxo5d6EOnOE-vERwQf2a1w</td>\n",
-       "      <td>2ntnbUia9Bna62W0fqNcxg</td>\n",
-       "      <td>S-VD26LE_LeJNx5nASk_pw</td>\n",
+       "      <th>24</th>\n",
+       "      <td>lUUhg8ltDsUZ9h0xnwY4Dg</td>\n",
+       "      <td>RreNy--tOmXMl1en0wiBOg</td>\n",
+       "      <td>cPepkJeRMtHapc_b2Oe_dw</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>I was really between 3 and 4 stars for this on...</td>\n",
+       "      <td>2018-07-17 03:30:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>-P5E9BYUaK7s3PwBF5oAyg</td>\n",
+       "      <td>Jha0USGDMefGFRLik_xFQg</td>\n",
+       "      <td>bMratNjTG5ZFEA6hVyr-xQ</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>The service is always good, the employees are ...</td>\n",
-       "      <td>2021-01-26 18:01:45</td>\n",
+       "      <td>First time there and it was excellent!!! It fe...</td>\n",
+       "      <td>2017-02-19 13:32:05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>347458</th>\n",
-       "      <td>STqHwh6xd05bgS6FoAgRqw</td>\n",
-       "      <td>j4qNLF-VNRF2DwBkUENW-w</td>\n",
-       "      <td>yE1raqkLX7OZsjmX3qKIKg</td>\n",
+       "      <th>31</th>\n",
+       "      <td>YbMyvlDA2W3Py5lTz8VK-A</td>\n",
+       "      <td>4hBhtCSgoxkrFgHa4YAD-w</td>\n",
+       "      <td>bbEXAEFr4RYHLlZ-HFssTA</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>two words: whipped. feta. \\nexplosion of amazi...</td>\n",
-       "      <td>2021-01-27 23:28:03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>351191</th>\n",
-       "      <td>u0smrr16uVQ8pgSEseXcKg</td>\n",
-       "      <td>H3P9EB7J9HP6PzkVjgFiOg</td>\n",
-       "      <td>oQ5CPRt0R3AzFvcjNOqB1w</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>So day 2 in Nashville. I gotta get some BBQ. M...</td>\n",
-       "      <td>2021-03-17 20:09:00</td>\n",
+       "      <td>Great burgers,fries and salad!  Burgers have a...</td>\n",
+       "      <td>2017-01-02 03:17:34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     review_id                 user_id  \\\n",
-       "338961  iBUJvIOkToh2ZECVNq5PDg  iAD32p6h32eKDVxsPHSRHA   \n",
-       "341768  HgEofz6qEQqKYPT7YLA34w  rYvWv-Ny16b1lMcw1IP7JQ   \n",
-       "344290  Kxo5d6EOnOE-vERwQf2a1w  2ntnbUia9Bna62W0fqNcxg   \n",
-       "347458  STqHwh6xd05bgS6FoAgRqw  j4qNLF-VNRF2DwBkUENW-w   \n",
-       "351191  u0smrr16uVQ8pgSEseXcKg  H3P9EB7J9HP6PzkVjgFiOg   \n",
+       "                 review_id                 user_id             business_id  \\\n",
+       "0   KU_O5udG6zpxOg-VcAEodg  mh_-eMZ6K5RLWhZyISBhwA  XQfwVwDr-v0ZS3_CbbE5Xw   \n",
+       "4   Sx8TMOWLNuJBWer-0pcmoA  bcjbaE6dDog4jkNY91ncLQ  e4Vwtrqf-wpJfwesgvdgxQ   \n",
+       "24  lUUhg8ltDsUZ9h0xnwY4Dg  RreNy--tOmXMl1en0wiBOg  cPepkJeRMtHapc_b2Oe_dw   \n",
+       "30  -P5E9BYUaK7s3PwBF5oAyg  Jha0USGDMefGFRLik_xFQg  bMratNjTG5ZFEA6hVyr-xQ   \n",
+       "31  YbMyvlDA2W3Py5lTz8VK-A  4hBhtCSgoxkrFgHa4YAD-w  bbEXAEFr4RYHLlZ-HFssTA   \n",
        "\n",
-       "                   business_id  stars  useful  funny  cool  \\\n",
-       "338961  YB26JvvGS2LgkxEKOObSAw      5       0      0     0   \n",
-       "341768  jfIwOEXcVRyhZjM4ISOh4g      1       0      0     0   \n",
-       "344290  S-VD26LE_LeJNx5nASk_pw      5       0      0     0   \n",
-       "347458  yE1raqkLX7OZsjmX3qKIKg      5       0      0     0   \n",
-       "351191  oQ5CPRt0R3AzFvcjNOqB1w      5       0      0     0   \n",
+       "    stars  useful  funny  cool  \\\n",
+       "0       3       0      0     0   \n",
+       "4       4       1      0     1   \n",
+       "24      4       1      0     1   \n",
+       "30      5       0      0     0   \n",
+       "31      5       0      0     0   \n",
        "\n",
-       "                                                     text                date  \n",
-       "338961  I've been eating at this restaurant for over 5... 2021-01-08 01:49:36  \n",
-       "341768  How does a delivery person from here get lost ... 2021-01-02 00:19:00  \n",
-       "344290  The service is always good, the employees are ... 2021-01-26 18:01:45  \n",
-       "347458  two words: whipped. feta. \\nexplosion of amazi... 2021-01-27 23:28:03  \n",
-       "351191  So day 2 in Nashville. I gotta get some BBQ. M... 2021-03-17 20:09:00  "
+       "                                                 text                date  \n",
+       "0   If you decide to eat here, just be aware it is... 2018-07-07 22:09:11  \n",
+       "4   Cute interior and owner (?) gave us tour of up... 2017-01-14 20:54:15  \n",
+       "24  I was really between 3 and 4 stars for this on... 2018-07-17 03:30:07  \n",
+       "30  First time there and it was excellent!!! It fe... 2017-02-19 13:32:05  \n",
+       "31  Great burgers,fries and salad!  Burgers have a... 2017-01-02 03:17:34  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Starting date of the dataframe to get 1 year worth of data\n",
-    "start_date = '2021-01-01 00:00:00'\n",
+    "# Starting date of the dataframe to get 5 year worth of data\n",
+    "start_date = '2017-01-01 00:00:00'\n",
     "\n",
-    "# Filter the DataFrame\n",
-    "one_year_reviews = rest_reviews[(rest_reviews['date'] >= start_date)]\n",
+    "# Getting 5 years worth of reviews\n",
+    "five_year_reviews = rest_reviews[(rest_reviews['date'] >= start_date)]\n",
     "\n",
     "# first five entries\n",
-    "one_year_reviews.head()"
+    "five_year_reviews.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "bb197814-9fae-4890-9dcb-324c212d1631",
    "metadata": {},
    "outputs": [
@@ -966,38 +966,69 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 429771 entries, 338961 to 6990278\n",
+      "Index: 2559586 entries, 0 to 6990279\n",
       "Data columns (total 9 columns):\n",
-      " #   Column       Non-Null Count   Dtype         \n",
-      "---  ------       --------------   -----         \n",
-      " 0   review_id    429771 non-null  object        \n",
-      " 1   user_id      429771 non-null  object        \n",
-      " 2   business_id  429771 non-null  object        \n",
-      " 3   stars        429771 non-null  int64         \n",
-      " 4   useful       429771 non-null  int64         \n",
-      " 5   funny        429771 non-null  int64         \n",
-      " 6   cool         429771 non-null  int64         \n",
-      " 7   text         429771 non-null  object        \n",
-      " 8   date         429771 non-null  datetime64[ns]\n",
+      " #   Column       Dtype         \n",
+      "---  ------       -----         \n",
+      " 0   review_id    object        \n",
+      " 1   user_id      object        \n",
+      " 2   business_id  object        \n",
+      " 3   stars        int64         \n",
+      " 4   useful       int64         \n",
+      " 5   funny        int64         \n",
+      " 6   cool         int64         \n",
+      " 7   text         object        \n",
+      " 8   date         datetime64[ns]\n",
       "dtypes: datetime64[ns](1), int64(4), object(4)\n",
-      "memory usage: 32.8+ MB\n"
+      "memory usage: 195.3+ MB\n"
      ]
     }
    ],
    "source": [
-    "# Getting 1 years worth of reviews\n",
-    "one_year_reviews.info()"
+    "# Getting information on the 5 year reviews dataset\n",
+    "five_year_reviews.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "00bb0376-9366-428c-8a3e-6d07a2632b8a",
+   "execution_count": 17,
+   "id": "f2852f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2559586 entries, 0 to 6990279\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Dtype         \n",
+      "---  ------       -----         \n",
+      " 0   user_id      object        \n",
+      " 1   business_id  object        \n",
+      " 2   stars        int64         \n",
+      " 3   date         datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), int64(1), object(2)\n",
+      "memory usage: 97.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtering to have only the relevant dataset\n",
+    "five_year_reviews=five_year_reviews[['user_id','business_id','stars','date']]\n",
+    "\n",
+    "five_year_reviews.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1a807316",
    "metadata": {},
    "outputs": [],
    "source": [
     "# saving the one_year_reviews to users.csv\n",
-    "one_year_reviews.to_csv('data/users.csv', index= False)"
+    "five_year_reviews.to_csv('data/users.csv', index= False)"
    ]
   },
   {
@@ -1017,24 +1048,17 @@
     "#### 2. Reviews Dataset\n",
     "- This dataset initially had approximately 6.99M reviews from all businesses. \n",
     "- It was filtered initially to only include reviews from restaurants bringing them down to 4.7M reviews\n",
-    "- Then further filtered to only include reviews for 1 year i.e. 2021-2022 bringing the dataset to approximately 420k reviews\n",
+    "- Then further filtered to only include reviews for 5 year i.e. 2017-2022 bringing the dataset to approximately 2.5M reviews\n",
+    "- This was done to keep the dataset as current as possible and to save on computational capacity.\n",
     "- It was then saved as users.csv in the data folder"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a763a278-b281-40b9-a7a3-dd0ce3a6ea63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python keras-env",
    "language": "python",
-   "name": "python3"
+   "name": "keras-env"
   },
   "language_info": {
    "codemirror_mode": {
