combining all notebooks

--- a/Final Notebook.ipynb
+++ b/Final Notebook.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "\n",
     "\n",
-    "# PERSONALIZED RESTAURANT RECOMMENDER SYSTEM\n",
+    "# GOURMET GURU RESTAURANT RECOMMENDER SYSTEM\n",
+    "***\n",
     "\n",
     "## 1. BUSINESS UNDERSTANDING\n",
+    "***\n",
     "\n",
     "### 1.1 Overview\n",
     "\n",
@@ -64,6 +66,7 @@
     "### 1.6 Metrics of success\n",
     "\n",
     "Metrics of Success will include:\n",
+    "\n",
     "•\tUser Engagement: Measured by the number of active users, frequency of use, and user retention rates.\n",
     "\n",
     "•\tRecommendation Accuracy: Evaluated through user feedback and satisfaction scores, focusing on how well the recommendations match user preferences.\n",
